[package]
name = "keydown"
version = "0.1.0"
edition = "2021" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libkeydown"
crate-type = ["staticlib", "cdylib"]
path = "src/main.rs"

[dependencies]
tauri-hotkey = "0.1.2"
once_cell = "1.5"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
anyhow = "1"
ulid = {version = "0.5", features = ["serde"]}
thiserror = "1"
parking_lot = "0.12"
log = "0.4"
strum = "0.24"
strum_macros = "0.24"
libc = "0.2"
hotkey-soundboard = {path = "extern/hotkey-rs", version = "0.0.3"}